manifests/service.yaml
# Copyright (c) 2020 SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.


apiVersion: v1
kind: Service
metadata:
  name: external-dns-ui
spec:
  selector:
    app: external-dns-ui
  ports:
  - port: 80
    targetPort: http
